Add trusted_proxies to configuration

--- a/homeassistant/configuration.yaml
+++ b/homeassistant/configuration.yaml
@@ -18,6 +18,7 @@ http:
   api_password: !secret http_password
   server_host: 127.0.0.1
   base_url: !secret base_url
+  trusted_proxies: 127.0.0.1
   use_x_forwarded_for: true
 
 mqtt:
