Filter temperature and humidity sensor values

--- a/homeassistant/sensors.yaml
+++ b/homeassistant/sensors.yaml
@@ -14,12 +14,33 @@
     - visibility
 
 - platform: mqtt
-  name: "Temperature"
+  name: "Raw temperature"
   state_topic: "sonoff/dht11/tele/SENSOR"
   value_template: "{{ value_json['DHT11']['Temperature'] }}"
   unit_of_measurement: "°C"
+  icon: mdi:thermometer
+
 - platform: mqtt
-  name: "Humidity"
+  name: "Raw humidity"
   state_topic: "sonoff/dht11/tele/SENSOR"
   value_template: "{{ value_json['DHT11']['Humidity'] }}"
   unit_of_measurement: "%"
+  icon: mdi:water-percent
+
+- platform: filter
+  name: "Temperature"
+  entity_id: sensor.raw_temperature
+  icon: mdi:thermometer
+  filters:
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
+
+- platform: filter
+  name: "Humidity"
+  entity_id: sensor.raw_humidity
+  icon: mdi:water-percent
+  filters:
+      - filter: lowpass
+        time_constant: 10
+        precision: 2
